[project]
name = "Harmoland-API"
version = "1.0.0"
description = "一个用于Harmoland服务器的API，具有白名单和群成员管理功能"
authors = [{ name = "Redlnn", email = "w731347477@gmail.com" }]
dependencies = [
    "aiohttp[speedups]>=3.8.5",
    "aiosqlite>=0.19.0",
    "asyncmy>=0.2.8",
    "fastapi>=0.101.0",
    "graia-amnesia>=0.7.1",
    "launart>=0.6.4",
    "loguru>=0.7.0",
    "orjson>=3.9.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.1.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "rcon>=2.4.2",
    "sqlalchemy[asyncio]>=2.0.19",
    "uvicorn[standard]>=0.23.2",
]
requires-python = ">=3.10"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.7.0",
    "ruff>=0.0.282",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
exclude = [
    ".git",
    ".venv",
    "__pypackages__",
    "dist",
]
ignore = ["F401"]

[tool.ruff.pydocstyle]
convention = "google"
